Unreleased

Added
    View / update LXD settings on a host if admin (#534)
    Set snap cert location (#271)
    Admin can view disks list on server page
    Opt in attempt to gather software versions from containers (#576)
    Opt in attempt to gather cronjob/systemd timers from instances

Changed
    Use bash shell as the default for {oracle, rocky} images (#544)
    Support instances in the custom state "Ready" (#547)
    Set default shell for centos as bash (#546)
    Image servers no longer hardcoded and can be controlled in admin

Fixed
    Shell doesn't work when port is something other than 443 (#540)
    Node server would crash when terminal sent binary data
    Deleting host removes to many metrics
    Cant restore VM snapshot to origin (#551)
    Cant restore instance snapshot to new instance (#555)
    Unavailable to deploy cloud config on servers (#549)
    Cluster memeber events socket not being connected
    Cant edit profile devices while creating

0.16.0 - 06/09/2022

Added
    Show IP addresses on server instances view (#531)
    Can now change Apache listen address in SNAP (#527) (Code, mostly, cherry-picked from https://github.com/asmaack/nextcloud-snap)

Changed
    Update SNAP apache version to 2.4.54
    Re-structure node code
    Node should no longer need reloading after adding a host
    Add padding back to sidebar items (#532)

Fixed
    Storage pool details dont load if used_by is null

0.15.0 - 06/08/2022

Added
    Index to Project Analytics Date Created column to improve load times (#501)
        This migration might be slow to run, be patient
    Renew LXDMosaic certificate for LXD (#483)
    Docs: Start "Production" page with some settings operators may want to consider (#465)
    Add different devices to profile on creation (part of #442)
    Edit profiles (#442)
    Support for failed backups (#481)
    Delete user (#399)
    Emit some lifecycle events on the "operations" socket